compiler/testData/diagnostics/tests/dataClasses/noConstructor.kt
data class <!DATA_CLASS_WITHOUT_PARAMETERS!>A<!>

fun foo(a: A) {
    a.<!UNRESOLVED_REFERENCE!>component1<!>()
    a.<!UNRESOLVED_REFERENCE!>component2<!>()
}
